# react-native-executorch

./: .clang-format  .clang-format-ignore  .cspell-wordlist.txt  .cspell.json  .eslintrc  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc  .yarnrc.yml  404.html  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MODEL_SPEC.md  README.md  RELEASE.md  app.json  docs.html  index.html  jitpack.yml  lefthook.yml  llms.txt  opensearch.xml  package.json  pom.xml  react-native-executorch.podspec  rnrepo.config.json  search.html  sitemap.xml  tsconfig.json  turbo.json
.github/: dependabot.yml  (+1 more)
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/cpp/: CMakeLists.txt  ETInstallerModule.cpp  OnLoad.cpp
android/src/main/java/com/rnexecutorch/: Fetcher.kt  RnExecutorchImpl.kt  RnExecutorchModule.kt  RnExecutorchPackage.kt
android/src/main/java/com/swmansion/rnexecutorch/: ConversationManager.kt  ETInstaller.kt  ETModule.kt  ImageSegmentation.kt  LLM.kt  OCR.kt  ObjectDetection.kt  RnExecutorchModule.kt  RnExecutorchPackage.kt  SpeechToText.kt  StyleTransfer.kt  TextEmbeddings.kt  Tokenizer.kt  VerticalOCR.kt
android/src/main/java/com/swmansion/rnexecutorch/models/: BaseModel.kt  Model.kt  StyleTransferModel.kt
android/src/main/java/com/swmansion/rnexecutorch/models/TextEmbeddings/: TextEmbeddingsModel.kt
android/src/main/java/com/swmansion/rnexecutorch/models/classification/: ClassificationModel.kt  Constants.kt  Utils.kt
android/src/main/java/com/swmansion/rnexecutorch/utils/: ArrayUtils.kt  ETError.kt  Fetcher.kt  ImageProcessor.kt  Numerical.kt  ObjectDetectionUtils.kt  ProgressResponseBody.kt  STFT.kt  TensorUtils.kt
android/src/newarch/java/com/rnexecutorch/: RnExecutorchModule.kt
android/src/oldarch/java/com/rnexecutorch/: RnExecutorchModule.kt
src/: LLM.ts  (+11 more)
(+14348 files in other folders)
